kubeflow/helm/pipelines/dryrun/visualization-server/kubeflow-pipelines-visualization-server_Service.yml
# Source: pipelines/templates/visualization-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeflow-pipelines-visualization-server
  namespace: kubeflow
  labels:
    helm.sh/chart: pipelines-0.1.89
    app: pipelines
    app.kubernetes.io/name: pipelines
    app.kubernetes.io/instance: kubeflow
    app.kubernetes.io/version: "1.8.1"
    version: "1.8.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8888
      targetPort: website
      protocol: TCP
      name: http-website
  selector:
    app: pipelines-visualization-server
    app.kubernetes.io/name: pipelines-visualization-server
    app.kubernetes.io/instance: kubeflow
