kubeflow/helm/pipelines/dryrun/visualization-server/kubeflow-pipelines-visualization-server_DestinationRule.yml
# Source: pipelines/templates/visualization-server/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  labels:
    helm.sh/chart: pipelines-0.1.89
    app: pipelines
    app.kubernetes.io/name: pipelines
    app.kubernetes.io/instance: kubeflow
    app.kubernetes.io/version: "1.8.1"
    version: "1.8.1"
    app.kubernetes.io/managed-by: Helm
  name: kubeflow-pipelines-visualization-server
  namespace: kubeflow
spec:
  host: kubeflow-pipelines-visualization-server.kubeflow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
