kubeflow/helm/pipelines/dryrun/visualization-server/kubeflow-pipelines-visualization-server_AuthorizationPolicy.yml
# Source: pipelines/templates/visualization-server/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  labels:
    helm.sh/chart: pipelines-0.1.89
    app: pipelines
    app.kubernetes.io/name: pipelines
    app.kubernetes.io/instance: kubeflow
    app.kubernetes.io/version: "1.8.1"
    version: "1.8.1"
    app.kubernetes.io/managed-by: Helm
  name: kubeflow-pipelines-visualization-server
  namespace: kubeflow
spec:
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/kubeflow/sa/kubeflow-pipelines-api-server
              - cluster.local/ns/kubeflow/sa/kubeflow-pipelines-web-app
              - cluster.local/ns/kubeflow/sa/kubeflow-pipelines-persistence-agent
              - cluster.local/ns/kubeflow/sa/kubeflow-pipelines-scheduled-workflow
              - cluster.local/ns/kubeflow/sa/kubeflow-pipelines-viewer-controller
              - cluster.local/ns/kubeflow/sa/kubeflow-pipelines-cache-server
  selector:
    matchLabels:
      app: pipelines-visualization-server
      app.kubernetes.io/name: pipelines-visualization-server
      app.kubernetes.io/instance: kubeflow
